# array_LRR_gwas

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  generate-report.yml
array_lrr_gwas/: __init__.py  association.py  audit.py  cli.py  correction.py  decomposition.py  genome_build.py  genotypes.py  grm.py  gwas_report.py  interactive_report.py  io_vcf.py  ld_prune.py  qc_config.py  sample_sheet.py  segmentation.py  select_k.py  subsetting.py  variant_qc.py
docs/: association_engine_design.md  index.html  sample_metrics.tsv  sample_qc_provenance.md  segmentation_design.md  upstream_qc_formats.md
output/correction/: corrected.bcf.csi  corrected.bcf.svd.loadings.tsv  corrected.bcf.svd.sample_pcs.tsv  (+1 more)
reviews/: PR_32.md
tests/: __init__.py  _coverage_report.py  conftest.py  make_mtdna_cn_phenotype.py  make_test_phenotype.py  subset_variant_qc.py  test_association.py  test_audit.py  test_cli.py  test_correction.py  test_correction_integration.py  test_decomposition.py  test_functional_bcf.py  test_genome_build.py  test_genotypes.py  test_grm.py  test_gwas_report.py  test_interactive_report.py  test_io_vcf.py  test_io_vcf_streaming.py  test_ld_prune.py  test_marker_exclusion.py  test_qc_config.py  test_qr_regression.py  test_run_correction.sh  test_sample_exclusion.py  test_sample_sheet.py  test_segmentation.py  test_select_every_nth.py  test_select_k.py  test_smoke_idat_integration.py  test_streaming_association.py  test_subsetting.py  test_subsetting_uniform.py  test_variant_qc.py
tests/data/: sample_qc.tsv  (+5 more)
(+3 files in other folders)
