[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "array_lrr_gwas"
version = "0.1.0"
description = "Perform GWAS using LRR as quantitative CNV proxies"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "pysam>=0.20",
    "pyyaml>=6.0",
    "plotly>=5.0",
    "umap-learn>=0.5",
    "tqdm>=4.0",
]

[project.optional-dependencies]
fbpca = ["fbpca>=0.1"]
report = []
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
array-lrr-gwas = "array_lrr_gwas.cli:main"

[tool.setuptools.packages.find]
include = ["array_lrr_gwas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
